correcting h1 and p align to start

--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,11 @@ h1, h2, h3 {
     }
     .hero__text h1 {
         margin-top: 1rem;
-        font-size: 2.5rem;
+        font-size: 3.2rem;
+        text-align: start;
+    }
+    .hero__text p {
+        text-align: start;
     }
 
     .hero__reviews {
